kubernetes/springboot-sampleapp/springboot-sampleapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-sampleapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: springboot-sampleapp
  type: NodePort
