kubernetes/springboot-sampleapp/springboot-sampleapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-sampleapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: ########Set this value to your DNS ####
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-sampleapp
            port:
              number: 8080
